kustomize/llama-stack-playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-stack-playground
  namespace: llama-stack-mcp-demo
  labels:
    app: llama-stack-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-stack-playground
  template:
    metadata:
      labels:
        app: llama-stack-playground
    spec:
      containers:
        - name: llama-stack-playground
          image: quay.io/rh-aiservices-bu/llama-stack-playground:0.2.1
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 2Gi
